--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Swifture | Coming Soon</title>
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -22,10 +26,11 @@
       color: #555;
     }
     .logo {
-      font-weight: bold;
-      color: #0b5ed7;
-      font-size: 1.5em;
       margin-bottom: 20px;
+    }
+    .logo img {
+      max-width: 200px;
+      height: auto;
     }
     .coming-soon {
       background: white;
@@ -39,7 +44,9 @@
 </head>
 <body>
   <div class="coming-soon">
-    <div class="logo">Swifture</div>
+    <div class="logo">
+      <img src="images/logo.png" alt="Swifture Logo">
+    </div>
     <h1>🚀 We’re Launching Soon</h1>
     <p>Our Amazon FBA store and online shop are coming to life. Stay tuned!</p>
   </div>
