--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Swifture | Coming Soon</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" sizes="16x16 32x32 64x64" type="image/x-icon" />
-<link rel="icon" type="image/png" href="images/favicon.png" sizes="64x64" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
