--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <title>Swifture | Coming Soon</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png" />
+  <meta name="theme-color" content="#ffffff" />
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Inter', 'Segoe UI', sans-serif;
       text-align: center;
       background-color: #f4f4f4;
       color: #333;
