--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Swifture | Coming Soon</title>
 
-<!-- Favicon -->
-<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 
   <style>
     body {
-      font-family: 'Inter', 'Segoe UI', sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
       background-color: #f4f4f4;
       color: #333;
