--- a/index.html
+++ b/index.html
@@ -3,52 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Swifture | Coming Soon</title>
+  <title>Swifture | Quality You Can Click</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="images/favicon.png" type="image/x-icon" />
 
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
       background-color: #f4f4f4;
       color: #333;
-      margin: 0;
-      padding: 50px 20px;
     }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 0.3em;
+
+    .hero {
+      background: url('images/hero-header.jpg') no-repeat center center;
+      background-size: cover;
+      padding: 100px 20px 60px;
+      text-align: center;
+      color: white;
     }
-    p {
-      font-size: 1.2em;
-      color: #555;
-    }
-    .logo {
+
+    .logo img {
+      max-width: 150px;
       margin-bottom: 20px;
     }
-    .logo img {
-      max-width: 200px;
-      height: auto;
+
+    .hero h1 {
+      font-size: 2.8em;
+      margin: 0.2em 0;
+      font-weight: 600;
     }
-    .coming-soon {
+
+    .hero p {
+      font-size: 1.3em;
+      margin: 0;
+      color: #f1f1f1;
+    }
+
+    .products {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
+      text-align: center;
+    }
+
+    .product {
       background: white;
       border-radius: 12px;
-      padding: 40px;
-      max-width: 600px;
-      margin: auto;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.07);
+      padding: 20px;
+      margin: 20px;
+      display: inline-block;
+      width: 250px;
+      vertical-align: top;
+    }
+
+    .product img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    .product h3 {
+      font-size: 1.1em;
+      margin: 10px 0 5px;
+    }
+
+    .product p {
+      font-size: 0.95em;
+      color: #666;
+    }
+
+    .shop-button {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #f7931e;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
-  <div class="coming-soon">
+
+  <div class="hero">
     <div class="logo">
-      <img src="images/logo.png" alt="Swifture Logo">
+      <img src="images/logo.png" alt="Swifture Logo" />
     </div>
-    <h1>🚀 We’re Launching Soon</h1>
-    <p>Our Amazon FBA store and online shop are coming to life. Stay tuned!</p>
+    <h1>Quality Products. Lightning Fast.</h1>
+    <p>Powered by Amazon FBA – browse & shop with confidence</p>
   </div>
-</body>
-</html>
+
+  <div class="products">
+    <div class="product">
+      <img src="images/product1.jpg" alt="Product 1" />
+      <h3>Product Title 1</h3>
+      <p>Short product description goes here.</p>
+      <a href="https://www.amazon.com/dp/PRODUCT_ID_1" class="shop-button" target="_blank">Shop at Amazon</a>
+    </div>
+
+    <div class="product">
+      <img src="images/product2.jpg" alt="Product 2" /
