--- a/index.html
+++ b/index.html
@@ -108,4 +108,14 @@
     </div>
 
     <div class="product">
-      <img src="images/product2.jpg" alt="Product 2" /
+      <img src="images/product2.jpg" alt="Product 2" />
+      <h3>Product Title 2</h3>
+      <p>Short product description goes here.</p>
+      <a href="https://www.amazon.com/dp/PRODUCT_ID_2" class="shop-button" target="_blank">Shop at Amazon</a>
+    </div>
+
+    <!-- Add more product cards as needed -->
+  </div>
+
+</body>
+</html>
