--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     .hero {
-      background: url('images/hero-header.png') no-repeat center center;
+      background: url('images/header.png') no-repeat center center;
       background-size: cover;
       padding: 100px 20px 60px;
       text-align: center;
