--- a/index.html
+++ b/index.html
@@ -14,100 +14,21 @@
       font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
+      background-color: #000;
+      color: white;
     }
 
     .hero {
       background: url('images/header.png') no-repeat center center;
       background-size: cover;
-      padding: 100px 20px 60px;
-      text-align: center;
-      color: white;
-    }
-
-    .logo img {
-      max-width: 150px;
-      margin-bottom: 20px;
-    }
-
-    .hero h1 {
-      font-size: 2.8em;
-      margin: 0.2em 0;
-      font-weight: 600;
-    }
-
-    .hero p {
-      font-size: 1.3em;
-      margin: 0;
-      color: #f1f1f1;
-    }
-
-    .products {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: auto;
-      text-align: center;
-    }
-
-    .product {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.07);
-      padding: 20px;
-      margin: 20px;
-      display: inline-block;
-      width: 250px;
-      vertical-align: top;
-    }
-
-    .product img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-    }
-
-    .product h3 {
-      font-size: 1.1em;
-      margin: 10px 0 5px;
-    }
-
-    .product p {
-      font-size: 0.95em;
-      color: #666;
-    }
-
-    .shop-button {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 20px;
-      background-color: #f7931e;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: 600;
+      width: 100%;
+      aspect-ratio: 2 / 1;
     }
   </style>
 </head>
 <body>
 
-  <div class="products">
-    <div class="product">
-      <img src="images/product1.jpg" alt="Product 1" />
-      <h3>Product Title 1</h3>
-      <p>Short product description goes here.</p>
-      <a href="https://www.amazon.com/dp/PRODUCT_ID_1" class="shop-button" target="_blank">Shop at Amazon</a>
-    </div>
-
-    <div class="product">
-      <img src="images/product2.jpg" alt="Product 2" />
-      <h3>Product Title 2</h3>
-      <p>Short product description goes here.</p>
-      <a href="https://www.amazon.com/dp/PRODUCT_ID_2" class="shop-button" target="_blank">Shop at Amazon</a>
-    </div>
-
-    <!-- Add more product cards as needed -->
-  </div>
+  <div class="hero"></div>
 
 </body>
 </html>
