--- a/index.html
+++ b/index.html
@@ -5,30 +5,136 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Swifture | Quality You Can Click</title>
 
-  <!-- Favicon -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
+    * {
       margin: 0;
       padding: 0;
-      background-color: #000;
-      color: white;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #111;
+      color: #eee;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .header {
+      display: flex;
+      width: 100%;
+      height: 33vh;
+      position: relative;
     }
 
     .hero {
+      flex: 1;
       background: url('images/header.png') no-repeat center center;
       background-size: cover;
+    }
+
+    .info-panel {
+      width: 300px;
+      background-color: #1a1a1a;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 20px;
+      gap: 20px;
+    }
+
+    .info-block {
+      background: #222;
+      padding: 15px 20px;
+      border-radius: 8px;
       width: 100%;
-      aspect-ratio: 2 / 1;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+
+    .info-block h4 {
+      margin-bottom: 5px;
+      font-size: 1em;
+      color: #f7931e;
+    }
+
+    .clock {
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+
+    .email-link {
+      color: #f7931e;
+      text-decoration: none;
+    }
+
+    .content {
+      flex: 1;
+      padding: 60px 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #888;
+    }
+
+    .content p {
+      font-size: 1.2em;
     }
   </style>
 </head>
 <body>
 
-  <div class="hero"></div>
+  <div class="header">
+    <div class="hero"></div>
+    <div class="info-panel">
+      <div class="info-block">
+        <h4>🕒 Local Time</h4>
+        <div class="clock" id="clock">--:--:--</div>
+      </div>
+
+      <div class="info-block">
+        <h4>🌤 Weather</h4>
+        <div id="weather">Loading...</div>
+      </div>
+
+      <div class="info-block">
+        <h4>📧 Support</h4>
+        <a href="mailto:support@swifture.co" class="email-link">support@swifture.co</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="content">
+    <p>Your products will be displayed here soon...</p>
+  </div>
+
+  <script>
+    // Clock
+    function updateClock() {
+      const now = new Date();
+      const timeStr = now.toLocaleTimeString();
+      document.getElementById('clock').textContent = timeStr;
+    }
+    setInterval(updateClock, 1000);
+    updateClock();
+
+    // Weather
+    function getWeather() {
+      fetch('https://wttr.in/?format=%l:+%t+%c')
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById('weather').textContent = data;
+        })
+        .catch(() => {
+          document.getElementById('weather').textContent = "Unable to load weather";
+        });
+    }
+    getWeather();
+  </script>
 
 </body>
 </html>
