--- a/index.html
+++ b/index.html
@@ -4,116 +4,144 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Swifture | Quality You Can Click</title>
-
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     * {
-      margin: 0;
-      padding: 0;
       box-sizing: border-box;
     }
 
     body {
       font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
       background-color: #111;
-      color: #eee;
+      color: #fff;
+      display: flex;
       min-height: 100vh;
-      display: flex;
-      flex-direction: column;
     }
 
-    .header {
-      display: flex;
-      width: 100%;
-      height: 33vh;
-      position: relative;
-    }
-
-    .hero {
-      flex: 1;
+    .left-column {
+      width: 33.33%;
       background: url('images/header.png') no-repeat center center;
       background-size: cover;
+      min-height: 100vh;
     }
 
-    .info-panel {
-      width: 300px;
-      background-color: #1a1a1a;
+    .right-column {
+      width: 66.67%;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
+      justify-content: space-between;
       padding: 20px;
-      gap: 20px;
+      background-color: #1a1a1a;
     }
 
-    .info-block {
-      background: #222;
-      padding: 15px 20px;
-      border-radius: 8px;
-      width: 100%;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-
-    .info-block h4 {
-      margin-bottom: 5px;
+    .top-right {
+      display: flex;
+      justify-content: flex-end;
+      gap: 30px;
       font-size: 1em;
-      color: #f7931e;
+      font-weight: 500;
     }
 
-    .clock {
-      font-size: 1.2em;
-      font-weight: bold;
+    .products {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 40px;
     }
 
-    .email-link {
+    .product {
+      background: #222;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      padding: 20px;
+      margin: 20px;
+      width: 250px;
+      text-align: center;
+      color: #fff;
+    }
+
+    .product img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    .product h3 {
+      font-size: 1.1em;
+      margin: 10px 0 5px;
+    }
+
+    .product p {
+      font-size: 0.95em;
+      color: #ccc;
+    }
+
+    .shop-button {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #f7931e;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: 600;
+    }
+
+    .support a {
       color: #f7931e;
       text-decoration: none;
     }
 
-    .content {
-      flex: 1;
-      padding: 60px 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #888;
-    }
+    @media (max-width: 900px) {
+      body {
+        flex-direction: column;
+      }
 
-    .content p {
-      font-size: 1.2em;
+      .left-column, .right-column {
+        width: 100%;
+      }
+
+      .top-right {
+        justify-content: center;
+        gap: 20px;
+        margin-bottom: 20px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <div class="header">
-    <div class="hero"></div>
-    <div class="info-panel">
-      <div class="info-block">
-        <h4>🕒 Local Time</h4>
-        <div class="clock" id="clock">--:--:--</div>
+  <div class="left-column"></div>
+
+  <div class="right-column">
+    <div class="top-right">
+      <div class="clock" id="clock">Loading time...</div>
+      <div class="weather" id="weather">Loading weather...</div>
+      <div class="support"><a href="mailto:support@swifture.co">📩 support@swifture.co</a></div>
+    </div>
+
+    <div class="products">
+      <div class="product">
+        <img src="images/product1.jpg" alt="Product 1" />
+        <h3>Product Title 1</h3>
+        <p>Short product description goes here.</p>
+        <a href="https://www.amazon.com/dp/PRODUCT_ID_1" class="shop-button" target="_blank">Shop at Amazon</a>
       </div>
 
-      <div class="info-block">
-        <h4>🌤 Weather</h4>
-        <div id="weather">Loading...</div>
-      </div>
-
-      <div class="info-block">
-        <h4>📧 Support</h4>
-        <a href="mailto:support@swifture.co" class="email-link">support@swifture.co</a>
+      <div class="product">
+        <img src="images/product2.jpg" alt="Product 2" />
+        <h3>Product Title 2</h3>
+        <p>Short product description goes here.</p>
+        <a href="https://www.amazon.com/dp/PRODUCT_ID_2" class="shop-button" target="_blank">Shop at Amazon</a>
       </div>
     </div>
   </div>
 
-  <div class="content">
-    <p>Your products will be displayed here soon...</p>
-  </div>
-
   <script>
-    // Clock
     function updateClock() {
       const now = new Date();
       const timeStr = now.toLocaleTimeString();
@@ -122,18 +150,28 @@
     setInterval(updateClock, 1000);
     updateClock();
 
-    // Weather
-    function getWeather() {
-      fetch('https://wttr.in/?format=%l:+%t+%c')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('weather').textContent = data;
-        })
-        .catch(() => {
-          document.getElementById('weather').textContent = "Unable to load weather";
-        });
-    }
-    getWeather();
+    // Fetch city from IP, then get weather
+    fetch('https://ipapi.co/json/')
+      .then(response => response.json())
+      .then(locationData => {
+        const city = locationData.city;
+        if (city) {
+          const encodedCity = encodeURIComponent(city);
+          fetch(`https://wttr.in/${encodedCity}?format=%l:+%t+%c`)
+            .then(res => res.text())
+            .then(weather => {
+              document.getElementById('weather').textContent = weather;
+            })
+            .catch(() => {
+              document.getElementById('weather').textContent = 'Weather unavailable';
+            });
+        } else {
+          document.getElementById('weather').textContent = 'City not found';
+        }
+      })
+      .catch(() => {
+        document.getElementById('weather').textContent = 'Location unavailable';
+      });
   </script>
 
 </body>
