--- a/index.html
+++ b/index.html
@@ -13,44 +13,47 @@
     }
 
     body {
-      font-family: 'Inter', sans-serif;
       margin: 0;
-      padding: 0;
+      font-family: 'Inter', sans-serif;
       background-color: #111;
       color: #fff;
       display: flex;
-      min-height: 100vh;
+      height: 100vh;
     }
 
-    .left-column {
+    .left-panel {
       width: 33.33%;
       background: url('images/header.png') no-repeat center center;
       background-size: cover;
-      min-height: 100vh;
     }
 
-    .right-column {
-      width: 66.67%;
+    .right-panel {
+      width: 66.66%;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      padding: 20px;
-      background-color: #1a1a1a;
+      padding: 20px 30px;
+      overflow-y: auto;
     }
 
     .top-right {
       display: flex;
       justify-content: flex-end;
-      gap: 30px;
+      gap: 20px;
       font-size: 1em;
       font-weight: 500;
+      margin-bottom: 20px;
+    }
+
+    .top-right .support a {
+      color: #f7931e;
+      text-decoration: none;
     }
 
     .products {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
-      margin-top: 40px;
+      gap: 30px;
+      justify-content: flex-start;
     }
 
     .product {
@@ -58,10 +61,8 @@
       border-radius: 12px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.2);
       padding: 20px;
-      margin: 20px;
       width: 250px;
       text-align: center;
-      color: #fff;
     }
 
     .product img {
@@ -91,33 +92,37 @@
       font-weight: 600;
     }
 
-    .support a {
-      color: #f7931e;
-      text-decoration: none;
-    }
-
-    @media (max-width: 900px) {
+    @media (max-width: 768px) {
       body {
         flex-direction: column;
       }
 
-      .left-column, .right-column {
+      .left-panel {
+        width: 100%;
+        height: 200px;
+      }
+
+      .right-panel {
         width: 100%;
       }
 
       .top-right {
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 5px;
+      }
+
+      .products {
         justify-content: center;
-        gap: 20px;
-        margin-bottom: 20px;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="left-column"></div>
+  <div class="left-panel"></div>
 
-  <div class="right-column">
+  <div class="right-panel">
     <div class="top-right">
       <div class="clock" id="clock">Loading time...</div>
       <div class="weather" id="weather">Loading weather...</div>
@@ -150,7 +155,6 @@
     setInterval(updateClock, 1000);
     updateClock();
 
-    // Fetch city from IP, then get weather
     fetch('https://ipapi.co/json/')
       .then(response => response.json())
       .then(locationData => {
