--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Swifture | Quality You Can Click</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-
   <style>
     * {
       box-sizing: border-box;
@@ -17,39 +16,32 @@
       font-family: 'Inter', sans-serif;
       background-color: #111;
       color: #fff;
-      display: flex;
-      height: 100vh;
     }
 
-    .left-panel {
-      width: 33.33%;
-      background: url('images/header.png') no-repeat center center;
+    .header {
+      width: 100%;
+      height: 250px;
+      background: url('images/header.png') center center no-repeat;
       background-size: cover;
     }
 
-    .right-panel {
-      width: 66.66%;
-      display: flex;
-      flex-direction: column;
-      padding: 20px 30px;
-      overflow-y: auto;
-    }
-
-    .top-right {
+    .top-bar {
       display: flex;
       justify-content: flex-end;
+      align-items: center;
       gap: 20px;
+      padding: 15px 30px;
       font-size: 1em;
       font-weight: 500;
-      margin-bottom: 20px;
     }
 
-    .top-right .support a {
+    .top-bar .support a {
       color: #f7931e;
       text-decoration: none;
     }
 
-    .products {
+    .main {
+      padding: 30px;
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
@@ -67,7 +59,6 @@
 
     .product img {
       max-width: 100%;
-      height: auto;
       border-radius: 8px;
     }
 
@@ -93,26 +84,13 @@
     }
 
     @media (max-width: 768px) {
-      body {
-        flex-direction: column;
-      }
-
-      .left-panel {
-        width: 100%;
-        height: 200px;
-      }
-
-      .right-panel {
-        width: 100%;
-      }
-
-      .top-right {
+      .top-bar {
         flex-direction: column;
         align-items: flex-end;
-        gap: 5px;
+        gap: 10px;
       }
 
-      .products {
+      .main {
         justify-content: center;
       }
     }
@@ -120,29 +98,27 @@
 </head>
 <body>
 
-  <div class="left-panel"></div>
+  <div class="header"></div>
 
-  <div class="right-panel">
-    <div class="top-right">
-      <div class="clock" id="clock">Loading time...</div>
-      <div class="weather" id="weather">Loading weather...</div>
-      <div class="support"><a href="mailto:support@swifture.co">📩 support@swifture.co</a></div>
+  <div class="top-bar">
+    <div class="clock" id="clock">Loading time...</div>
+    <div class="weather" id="weather">Loading weather...</div>
+    <div class="support"><a href="mailto:support@swifture.co">📩 support@swifture.co</a></div>
+  </div>
+
+  <div class="main">
+    <div class="product">
+      <img src="images/product1.jpg" alt="Product 1" />
+      <h3>Product Title 1</h3>
+      <p>Short product description goes here.</p>
+      <a href="https://www.amazon.com/dp/PRODUCT_ID_1" class="shop-button" target="_blank">Shop at Amazon</a>
     </div>
 
-    <div class="products">
-      <div class="product">
-        <img src="images/product1.jpg" alt="Product 1" />
-        <h3>Product Title 1</h3>
-        <p>Short product description goes here.</p>
-        <a href="https://www.amazon.com/dp/PRODUCT_ID_1" class="shop-button" target="_blank">Shop at Amazon</a>
-      </div>
-
-      <div class="product">
-        <img src="images/product2.jpg" alt="Product 2" />
-        <h3>Product Title 2</h3>
-        <p>Short product description goes here.</p>
-        <a href="https://www.amazon.com/dp/PRODUCT_ID_2" class="shop-button" target="_blank">Shop at Amazon</a>
-      </div>
+    <div class="product">
+      <img src="images/product2.jpg" alt="Product 2" />
+      <h3>Product Title 2</h3>
+      <p>Short product description goes here.</p>
+      <a href="https://www.amazon.com/dp/PRODUCT_ID_2" class="shop-button" target="_blank">Shop at Amazon</a>
     </div>
   </div>
 
