--- a/index.html
+++ b/index.html
@@ -18,141 +18,139 @@
       color: #fff;
     }
 
-    .header {
-      width: 100%;
-      height: 250px;
-      background: url('images/header.png') center center no-repeat;
-      background-size: cover;
-    }
-
-    .top-bar {
+    .info-box {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: rgba(255, 140, 0, 0.15);
+      border: 2px solid #f7931e;
+      border-radius: 12px;
+      padding: 10px 20px;
       display: flex;
-      justify-content: flex-end;
       align-items: center;
       gap: 20px;
-      padding: 15px 30px;
-      font-size: 1em;
+      font-size: 0.95em;
       font-weight: 500;
+      z-index: 100;
+      box-shadow: 0 0 15px rgba(247, 147, 30, 0.25);
     }
 
-    .top-bar .support a {
+    .info-box a {
       color: #f7931e;
       text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .header {
+      width: 100%;
+      height: 33vh;
+      background: url('images/header.png') center center no-repeat;
+      background-size: cover;
+      margin-top: 0;
     }
 
     .main {
-      padding: 30px;
+      padding: 40px 30px;
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
       justify-content: flex-start;
+      min-height: 67vh;
     }
 
-    .product {
-      background: #222;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      padding: 20px;
-      width: 250px;
+    .product-card {
+      background-color: #1c1c1c;
+      border-radius: 10px;
+      padding: 25px;
+      width: 260px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
       text-align: center;
     }
 
-    .product img {
-      max-width: 100%;
+    .product-card img {
+      width: 100%;
       border-radius: 8px;
+      margin-bottom: 15px;
     }
 
-    .product h3 {
-      font-size: 1.1em;
-      margin: 10px 0 5px;
+    .product-card h3 {
+      margin: 10px 0;
+      color: #fff;
     }
 
-    .product p {
-      font-size: 0.95em;
+    .product-card p {
       color: #ccc;
+      font-size: 0.9em;
     }
 
-    .shop-button {
+    .product-card a {
       display: inline-block;
-      margin-top: 10px;
+      margin-top: 15px;
       padding: 10px 20px;
       background-color: #f7931e;
-      color: white;
-      text-decoration: none;
+      color: #fff;
       border-radius: 6px;
-      font-weight: 600;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
     }
 
-    @media (max-width: 768px) {
-      .top-bar {
-        flex-direction: column;
-        align-items: flex-end;
-        gap: 10px;
-      }
-
-      .main {
-        justify-content: center;
-      }
+    .product-card a:hover {
+      background-color: #d97900;
     }
   </style>
 </head>
 <body>
+  <div class="info-box">
+    <div id="clock">Loading time...</div>
+    <div id="weather">Loading weather...</div>
+    <a href="mailto:support@swifture.co">📩 support@swifture.co</a>
+  </div>
 
   <div class="header"></div>
 
-  <div class="top-bar">
-    <div class="clock" id="clock">Loading time...</div>
-    <div class="weather" id="weather">Loading weather...</div>
-    <div class="support"><a href="mailto:support@swifture.co">📩 support@swifture.co</a></div>
-  </div>
-
   <div class="main">
-    <div class="product">
-      <img src="images/product1.jpg" alt="Product 1" />
+    <div class="product-card">
+      <img src="images/product1.png" alt="Product 1" />
       <h3>Product Title 1</h3>
       <p>Short product description goes here.</p>
-      <a href="https://www.amazon.com/dp/PRODUCT_ID_1" class="shop-button" target="_blank">Shop at Amazon</a>
+      <a href="#">Shop at Amazon</a>
     </div>
 
-    <div class="product">
-      <img src="images/product2.jpg" alt="Product 2" />
+    <div class="product-card">
+      <img src="images/product2.png" alt="Product 2" />
       <h3>Product Title 2</h3>
       <p>Short product description goes here.</p>
-      <a href="https://www.amazon.com/dp/PRODUCT_ID_2" class="shop-button" target="_blank">Shop at Amazon</a>
+      <a href="#">Shop at Amazon</a>
     </div>
   </div>
 
   <script>
+    // Clock
     function updateClock() {
       const now = new Date();
-      const timeStr = now.toLocaleTimeString();
-      document.getElementById('clock').textContent = timeStr;
+      const time = now.toLocaleTimeString();
+      document.getElementById('clock').textContent = time;
     }
     setInterval(updateClock, 1000);
     updateClock();
 
-    fetch('https://ipapi.co/json/')
-      .then(response => response.json())
-      .then(locationData => {
-        const city = locationData.city;
-        if (city) {
-          const encodedCity = encodeURIComponent(city);
-          fetch(`https://wttr.in/${encodedCity}?format=%l:+%t+%c`)
-            .then(res => res.text())
-            .then(weather => {
-              document.getElementById('weather').textContent = weather;
-            })
-            .catch(() => {
-              document.getElementById('weather').textContent = 'Weather unavailable';
-            });
-        } else {
-          document.getElementById('weather').textContent = 'City not found';
-        }
-      })
-      .catch(() => {
-        document.getElementById('weather').textContent = 'Location unavailable';
-      });
+    // Weather
+    async function fetchWeather() {
+      try {
+        const response = await fetch('https://ipapi.co/json');
+        const data = await response.json();
+        const city = data.city;
+        const weatherRes = await fetch(`https://wttr.in/${city}?format=%t+%c`);
+        const weather = await weatherRes.text();
+        document.getElementById('weather').textContent = `${city}: ${weather}`;
+      } catch (error) {
+        document.getElementById('weather').textContent = 'Weather not found';
+      }
+    }
+    fetchWeather();
   </script>
-
 </body>
 </html>
