--- a/index.html
+++ b/index.html
@@ -3,188 +3,186 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Swifture | Quality You Can Click</title>
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+  <title>Swifture</title>
 
+  <!-- FlipClock CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/dist/flipdown.min.css">
+
+  <!-- Custom Styles -->
+  <style>
     body {
       margin: 0;
-      font-family: 'Inter', sans-serif;
       background-color: #111;
-      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
     }
 
-    .info-container {
-      position: fixed;
-      top: 20px;
+    .header {
+      position: relative;
+      text-align: center;
+    }
+
+    .header img {
+      width: 100%;
+      max-height: 200px;
+      object-fit: cover;
+    }
+
+    .info-panel {
+      position: absolute;
+      top: 10px;
       right: 20px;
       display: flex;
       flex-direction: column;
       gap: 12px;
-      z-index: 1000;
+      z-index: 10;
     }
 
     .info-card {
-      background: rgba(255, 140, 0, 0.1);
-      border: 2px solid #f7931e;
+      background-color: #1a1a1a;
+      border: 2px solid orange;
       border-radius: 10px;
-      padding: 12px 18px;
-      font-size: 1em;
-      font-weight: 600;
-      text-align: center;
-      box-shadow: 0 6px 20px rgba(247, 147, 30, 0.35);
-      min-width: 170px;
-      max-width: 190px;
-      min-height: 48px;
+      padding: 12px 16px;
+      min-width: 260px;
+      box-shadow: 0 0 20px rgba(255, 165, 0, 0.5);
+      font-size: 16px;
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
-    .info-card a {
-      color: #f7931e;
-      text-decoration: none;
-      font-weight: 700;
+    .info-card i {
+      margin-right: 8px;
     }
 
-    .header {
-      width: 100%;
-      height: 33vh;
-      background: url('images/header.png') center center no-repeat;
-      background-size: cover;
-      margin-top: 0;
+    .flip-clock-container {
+      background-color: #1a1a1a;
+      border: 2px solid orange;
+      border-radius: 10px;
+      padding: 12px;
+      box-shadow: 0 0 20px orange;
     }
 
-    .main {
-      padding: 40px 30px;
+    .flipdown {
+      margin: auto;
+      transform: scale(0.7);
+    }
+
+    .flipdown .rotor-group {
+      margin: 0 3px;
+    }
+
+    .flipdown .rotor, 
+    .flipdown .rotor-top, 
+    .flipdown .rotor-bottom {
+      background-color: #ffe9cc;
+      border-radius: 5px;
+      color: #000;
+      font-family: 'Courier New', Courier, monospace;
+    }
+
+    /* Optional: hide days counter */
+    .flipdown .rotor-group:nth-child(1) {
+      display: none;
+    }
+
+    .products {
+      margin-top: 260px;
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
-      justify-content: flex-start;
-      min-height: 67vh;
+      padding: 40px;
+      justify-content: center;
     }
 
     .product-card {
-      background-color: #1c1c1c;
+      background-color: #1f1f1f;
       border-radius: 10px;
-      padding: 25px;
-      width: 260px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
+      padding: 20px;
+      width: 240px;
       text-align: center;
-    }
-
-    .product-card img {
-      width: 100%;
-      border-radius: 8px;
-      margin-bottom: 15px;
+      box-shadow: 0 0 10px #000;
     }
 
     .product-card h3 {
-      margin: 10px 0;
-      color: #fff;
+      margin-top: 10px;
+      font-size: 18px;
     }
 
     .product-card p {
+      font-size: 14px;
       color: #ccc;
-      font-size: 0.9em;
     }
 
-    .product-card a {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
-      background-color: #f7931e;
-      color: #fff;
-      border-radius: 6px;
+    .amazon-btn {
+      background-color: orange;
+      color: #000;
+      padding: 10px 16px;
       text-decoration: none;
+      border-radius: 5px;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      display: inline-block;
+      margin-top: 12px;
     }
-
-    .product-card a:hover {
-      background-color: #d97900;
-    }
-
-    #clock {
-      font-size: 1.3em;
-      letter-spacing: 1px;
-      font-weight: bold;
-      color: #f7931e;
-    }
-
-    #calendar {
-      font-weight: bold;
-    }
-
-    #weather {
-      color: #eee;
-    }
-
   </style>
 </head>
 <body>
-
-  <!-- Info Cards Stacked Top Right -->
-  <div class="info-container">
-    <div class="info-card" id="calendar">📅 Loading date...</div>
-    <div class="info-card" id="clock">⏰ Loading time...</div>
-    <div class="info-card" id="weather">🌤️ Loading weather...</div>
-    <div class="info-card"><a href="mailto:support@swifture.co">📩 support@swifture.co</a></div>
+  <!-- Header Image -->
+  <div class="header">
+    <img src="your-header-image.jpg" alt="Swifture header" />
+    <!-- Info Panel -->
+    <div class="info-panel">
+      <div class="info-card" id="calendar"></div>
+      <div class="flip-clock-container">
+        <div id="flip-clock" class="flipdown"></div>
+      </div>
+      <div class="info-card" id="weather"></div>
+      <div class="info-card">
+        📧 <span style="margin-left: 8px;">support@swifture.co</span>
+      </div>
+    </div>
   </div>
 
-  <!-- Header Image -->
-  <div class="header"></div>
-
-  <!-- Product Grid -->
-  <div class="main">
+  <!-- Product Section -->
+  <div class="products">
     <div class="product-card">
-      <img src="images/product1.png" alt="Product 1" />
+      <img src="product1.jpg" alt="Product 1" style="width:100%; border-radius: 6px;" />
       <h3>Product Title 1</h3>
       <p>Short product description goes here.</p>
-      <a href="#">Shop at Amazon</a>
+      <a href="#" class="amazon-btn">Shop at Amazon</a>
     </div>
-
     <div class="product-card">
-      <img src="images/product2.png" alt="Product 2" />
+      <img src="product2.jpg" alt="Product 2" style="width:100%; border-radius: 6px;" />
       <h3>Product Title 2</h3>
       <p>Short product description goes here.</p>
-      <a href="#">Shop at Amazon</a>
+      <a href="#" class="amazon-btn">Shop at Amazon</a>
     </div>
+    <!-- Add more products here -->
   </div>
 
-  <!-- Scripts -->
+  <!-- FlipClock + Dynamic Content JS -->
+  <script src="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/dist/flipdown.min.js"></script>
   <script>
-    function updateCalendar() {
+    // Start flip clock counting down to next midnight (used for 24h flip style)
+    function startFlipClock() {
       const now = new Date();
-      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-      document.getElementById('calendar').textContent = `📅 ${now.toLocaleDateString(undefined, options)}`;
+      const midnight = new Date();
+      midnight.setHours(24, 0, 0, 0);
+      const secondsToMidnight = Math.floor((midnight - now) / 1000);
+
+      new FlipDown((Date.now() / 1000) + secondsToMidnight, {
+        theme: 'light'
+      }).start();
     }
 
-    function updateClock() {
-      const now = new Date();
-      const time = now.toLocaleTimeString();
-      document.getElementById('clock').textContent = `⏰ ${time}`;
-    }
+    startFlipClock();
 
-    async function fetchWeather() {
-      try {
-        const ipInfo = await fetch('https://ipapi.co/json').then(r => r.json());
-        const city = ipInfo.city;
-        const weather = await fetch(`https://wttr.in/${city}?format=%t+%c`).then(r => r.text());
-        document.getElementById('weather').textContent = `🌤️ ${city}: ${weather}`;
-      } catch {
-        document.getElementById('weather').textContent = '⚠️ Weather unavailable';
-      }
-    }
+    // Set calendar date
+    const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+    document.getElementById("calendar").textContent = new Date().toLocaleDateString(undefined, options);
 
-    updateCalendar();
-    updateClock();
-    setInterval(updateClock, 1000);
-    fetchWeather();
+    // Example weather (can be made dynamic with API)
+    document.getElementById("weather").textContent = "Houston: +30°C 🌤️";
   </script>
 </body>
 </html>
