--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
       background: rgba(255, 140, 0, 0.1);
       border: 2px solid #f7931e;
       border-radius: 10px;
-      padding: 12px 18px;
+      padding: 10px 18px;
       font-size: 1em;
       font-weight: 600;
       text-align: center;
       box-shadow: 0 6px 20px rgba(247, 147, 30, 0.35);
-      min-width: 170px;
-      max-width: 190px;
-      min-height: 48px;
+      min-width: 190px;
+      max-width: 220px;
+      height: auto;
       display: flex;
       align-items: center;
       justify-content: center;
+      line-height: 1.2em;
     }
 
     .info-card a {
@@ -166,7 +167,7 @@
 
     function updateClock() {
       const now = new Date();
-      const time = now.toLocaleTimeString();
+      const time = now.toLocaleTimeString([], { hour12: false });
       document.getElementById('clock').textContent = `⏰ ${time}`;
     }
 
